--- a/package.json
+++ b/package.json
@@ -1,20 +1,39 @@
 {
   "name": "exp-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "webpack": "^4.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.5.1",
+    "css-loader": "^3.5.1",
+    "kss": "^3.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.0.0",
+    "onchange": "^6.1.0",
+    "parcel-bundler": "^1.12.4",
+    "sass-loader": "^7.0.2",
+    "typescript": "^3.8.3",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "webpack",
+    "kss": "kss --config kss-config.json",
+    "watch": "onchange 'src/*.scss' -- npm run kss"
+  },
+  "author": {
+    "name": "Hugo Laguna",
+    "email": "hugo@experimentality.co"
   },
   "eslintConfig": {
     "extends": "react-app"
