--- a/package.json
+++ b/package.json
@@ -1,53 +1,26 @@
 {
   "name": "exp-ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": false,
-  "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "webpack": "^4.0.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.5.1",
-    "css-loader": "^3.5.1",
-    "kss": "^3.0.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.0.0",
-    "onchange": "^6.1.0",
-    "parcel-bundler": "^1.12.4",
-    "sass-loader": "^7.0.2",
-    "typescript": "^3.8.3",
-    "webpack-cli": "^3.3.11"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "webpack",
+    "start": "sass --watch --no-source-map ./src:./styleguide/exp-ui & onchange 'src/*.scss' -- npm run kss & live-server ./styleguide",
+    "build": "sass --no-source-map --style compressed ./src:./dist",
     "kss": "kss --config kss-config.json",
     "watch": "onchange 'src/*.scss' -- npm run kss"
   },
+  "license": "ISC",
+  "style": "dist/index.css",
+  "repository": "git@github.com:experimentality/exp-ui.git",
   "author": {
     "name": "Hugo Laguna",
     "email": "hugo@experimentality.co"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "kss": "^3.0.0",
+    "michelangelo": "^0.8.0",
+    "onchange": "^6.1.0",
+    "parcel-bundler": "^1.12.4",
+    "live-server": "^1.2.0",
+    "sass": "^1.14.3"
   }
 }
