--- a/kss-config.json
+++ b/kss-config.json
@@ -1,5 +1,5 @@
 {
-  "title": "Kaspersky",
+  "title": "exp-ui",
   "source": "src/**",
   "destination": "styleguide/",
   "builder": "kss-theme/",
