--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.2.0",
   "private": false,
   "scripts": {
-    "start": "sass --watch --no-source-map ./src:./styleguide/exp-ui & onchange 'src/*.scss' -- npm run kss & live-server ./styleguide",
+    "start": "npm run sass & npm run watch & npm run link",
     "build": "sass --no-source-map --style compressed ./src:./dist",
     "kss": "kss --config kss-config.json",
+    "sass" : "sass --watch --no-source-map ./src:./styleguide/exp-ui",
     "link": "live-server ./styleguide",
     "watch": "onchange -v './src/**/*' -- npm run kss"
   },
